execution_full_out/cottontail_climb_part_2/013.txt
An error happened during execution:
  File "/tmp/tmpzm2nzcqr.py", line 43
    if len(second_seq) == 1 or second_seq[1] < second_digit := second_seq[0]:
       ^
SyntaxError: cannot use assignment expressions with operator
